--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mockjs": "^1.0.1-beta3",
     "nprogress": "^0.2.0",
     "vue": "^2.2.6",
+    "vue-amap": "^0.2.4",
     "vue-router": "^2.3.1",
     "vuex": "^2.3.1"
   },
