--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue": "^2.2.6",
     "vue-amap": "^0.2.4",
     "vue-router": "^2.3.1",
-    "vuex": "^2.3.1"
+    "vuex": "^2.3.1",
+    "vuex-router-sync": "^4.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
