--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "js-cookie": "^2.1.4",
     "mockjs": "^1.0.1-beta3",
     "nprogress": "^0.2.0",
+    "simplemde": "^1.11.2",
     "vue": "^2.2.6",
     "vue-amap": "^0.2.4",
+    "vue-count-to": "^1.0.5",
+    "vue-image-crop-upload": "^1.3.10",
     "vue-router": "^2.3.1",
+    "vue2-dropzone": "2.0.0",
     "vuex": "^2.3.1",
     "vuex-router-sync": "^4.1.2"
   },
@@ -31,6 +35,7 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.4.3",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
